# crypto-engine

./: LICENSE  README.md  __init__.py  exceptions.py  pyproject.toml  requirements-dev.txt
.github/workflows/: python-app.yml
api/: __init__.py  password_manager.py
config/: __init__.py  crypto_config.py
core/: __init__.py  engine.py  secure_memory.py
crypto_engine/api/: password_manager.py
crypto_engine/config/: crypto_config.py
crypto_engine/models/: __init__.py  encrypted_block.py  enums.py
crypto_engine/operations/: data_export.py  encryption.py  key_derivation.py
crypto_engine/utils/: logging_config.py
examples/: basic_usage.py
models/: __init__.py  account_info.py  encrypted_block.py  enums.py
operations/: __init__.py  authentication.py  data_export.py  encryption.py  key_derivation.py
tests/: README.md  run_tests.py  test_api.py  test_config.py  test_crypto_operations.py  test_data_management.py  test_edge_cases.py  test_engine.py  test_error_handling.py  test_models.py  test_performance.py  test_security.py  test_utils.py
utils/: __init__.py  logging_config.py
